Update 3.09 Design site and facility security controls.md

--- a/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
@@ -126,4 +126,90 @@ In addition to physical and environmental security, media storage facilities mus
 
 Finally, as part of a comprehensive data management strategy, **regular audits and reviews** should be conducted to ensure the integrity and security of the media stored within the facility. Proper retention and disposal policies should also be in place to ensure that outdated or obsolete media are securely destroyed to prevent unauthorized recovery of sensitive information.
 
+:link: Review [Establish Information and asset handling requirements](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN2%3A%20Asset%20Security/2.02%20Establish%20information%20and%20asset%20handling%20requirements.md#22-establish-information-and-asset-handling-requirements)
 
+### Open Questions ###
+
+1. Why are media storage facilities critical for business continuity?
+<details>
+  <summary>Show answer</summary>
+They provide secure storage for backup copies and archived data, ensuring that an organization can recover from system failures, cyberattacks, or natural disasters. Without these facilities, data loss could result in prolonged downtime or permanent loss of critical business information.
+</details>
+
+2. What physical security measures should be implemented in media storage facilities?
+<details>
+  <summary>Show answer</summary>
+Facilities must restrict access using locked doors, biometric or card-based access control, CCTV surveillance, and intrusion detection systems. Additional safeguards may include manned security and alarms to prevent unauthorized tampering, theft, or sabotage.
+</details>
+
+3. How do environmental controls protect stored media?
+<details>
+  <summary>Show answer</summary>
+Media such as tapes, optical discs, and hard drives are sensitive to temperature, humidity, and light exposure. Controlled environments with HVAC, dehumidifiers, and monitoring systems prevent degradation, ensuring long-term data integrity and usability.
+</details>
+
+4. What organizational practices improve security and manageability of stored media?
+<details>
+  <summary>Show answer</summary>
+Proper cataloging and labeling, secure storage in fire-resistant cabinets or vaults, and strict handling procedures (like chain-of-custody tracking or two-person access rules) improve accountability. Encrypting media at rest and in transit ensures that data remains secure even if physical media are compromised.
+</details>
+
+5. How can organizations reduce risks of disaster in media storage facilities?
+<details>
+  <summary>Show answer</summary>
+Facilities should be built with fire-resistant materials, equipped with fire suppression systems, and supported by off-site storage to provide redundancy. Regular audits, retention policies, and secure destruction procedures for obsolete media reduce risks of unauthorized recovery or data leakage.
+</details>
+
+---
+
+## 3.9.4 Evidence storage ##
+
+Evidence storage facilities are specialized areas designed to securely store physical and digital evidence, typically within law enforcement or corporate environments. These facilities are critical in ensuring that evidence is preserved in its original state, unaltered and untainted, for future analysis, investigations, or legal proceedings. Whether dealing with physical evidence like documents, weapons, or biological samples, or digital evidence such as hard drives, mobile devices, or network logs, the security and integrity of evidence storage are paramount to maintaining the reliability and trustworthiness of the evidence.
+
+One of the primary concerns in evidence storage is physical security. Unauthorized access to evidence storage facilities can compromise the integrity of the evidence, leading to potential tampering, theft, or loss. To mitigate these risks, these facilities should be equipped with stringent access controls, such as biometric or card-based authentication systems, and they should be monitored by surveillance cameras and alarm systems. Furthermore, only authorized personnel should be allowed to handle or enter evidence storage areas, with all access actions recorded for accountability.
+
+:necktie: You should consult a lawyer when dealing with evidence storage to ensure compliance with legal and regulatory requirements, especially regarding data privacy, chain of custody, and retention periods.
+
+Environmental controls are also crucial for maintaining the condition of evidence. For example, sensitive physical evidence like biological samples, narcotics, or documents may require specific temperature, humidity, or light conditions to prevent degradation. In such cases, the evidence storage facility must be equipped with climate control systems to maintain optimal conditions. Similarly, for digital evidence, proper storage conditions, including protection from electromagnetic interference, must be ensured to prevent corruption or data loss.
+
+In addition to physical and environmental security, evidence storage facilities should implement a **well-documented chain-of-custody process** to track and maintain accountability for each piece of evidence. This involves recording every person who has had access to the evidence, when it was accessed, and for what purpose. The chain-of-custody documentation is crucial for maintaining the legal admissibility of evidence, ensuring that it has not been tampered with or altered. Each piece of evidence should be carefully labeled with identifying information, such as case numbers, item descriptions, and storage locations, to prevent misidentification and to facilitate efficient retrieval.
+
+For digital evidence, additional safeguards must be in place. **Digital devices should be securely stored in protective cases or Faraday bags** to prevent remote access, tampering, or data alteration. Moreover, digital evidence should be encrypted both during storage and transport to ensure that unauthorized individuals cannot access the data. Access to digital evidence should be logged meticulously, with access restricted to authorized personnel only, and robust security measures like firewalls and intrusion detection systems should be in place to protect evidence from cyber threats.
+
+Fire and disaster risk mitigation is also an important aspect of evidence storage. Facilities should be equipped with fire suppression systems that do not damage sensitive evidence, such as gaseous or waterless fire suppression systems. In addition, facilities should be designed with resilience in mind, incorporating features like secure backups and off-site storage to ensure evidence is not lost due to catastrophic events like fires, floods, or earthquakes.
+
+Finally, proper disposal procedures are just as important as storage. Evidence that is no longer needed for investigations or legal proceedings must be disposed of securely to prevent any potential misuse or unauthorized recovery. The disposal process should follow strict guidelines to ensure that any sensitive material, particularly digital evidence, is permanently destroyed beyond recovery. In some cases, this may involve physical destruction, such as shredding documents or degaussing hard drives, or secure wiping of digital media to prevent data recovery.
+
+### Open Questions ###
+
+1. Why is the integrity of evidence storage facilities critical in investigations and legal proceedings?
+<details>
+  <summary>Show answer</summary>
+Because any tampering, alteration, or unauthorized access to evidence can render it inadmissible in court. Maintaining integrity ensures that evidence remains reliable, credible, and legally defensible, which is essential for both law enforcement and corporate investigations.
+</details>
+
+2. What security measures should be implemented to protect physical evidence in storage facilities?
+<details>
+  <summary>Show answer</summary>
+Strong access controls (biometric, card-based), CCTV surveillance, alarm systems, and strict authorization policies. All entries and exits should be logged to ensure accountability, and only trained, authorized personnel should handle evidence.
+</details>
+
+3. How do environmental controls support the preservation of evidence?
+<details>
+  <summary>Show answer</summary>
+Certain evidence, such as biological samples, narcotics, or documents, may require specific temperature, humidity, and light conditions to prevent degradation. For digital evidence, protection from electromagnetic interference and safe storage in Faraday bags ensures data remains intact and unaltered.
+</details>
+
+4. What role does the chain of custody play in evidence management?
+<details>
+  <summary>Show answer</summary>
+The chain of custody documents every interaction with the evidence — who accessed it, when, and why. This ensures accountability, prevents unauthorized handling, and maintains the legal admissibility of evidence by proving it has not been tampered with.
+</details>
+
+5. What safeguards and disposal methods are necessary for digital evidence?
+<details>
+  <summary>Show answer</summary>
+Digital evidence must be encrypted at rest and in transit, stored in secure containers (e.g., Faraday bags), and protected with intrusion detection and firewalls. For disposal, secure methods such as degaussing, shredding drives, or cryptographic wiping must be used to prevent data recovery and misuse.
+</details>
+
+---
