Update 2.03 Provision information and assets securely.md

--- a/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
+++ b/DOMAIN2: Asset Security/2.03 Provision information and assets securely.md
@@ -234,7 +234,7 @@ Effective asset management involves several key activities:
 ```mermaid
 flowchart LR
   A[Start: Effective Asset Management] --> B[Assignment of Ownership]
-  B --> C[IT Asset Management (ITAM)]
+  B --> C[IT Asset Management - ITAM]
   C --> C1[Manage hardware, software, data, processes throughout lifecycle]
   C1 --> C2[Align with ISO‑19770 standards for consistency & compliance]
   C --> D[Configuration Management]
