Update 3.09 Design site and facility security controls.md
Domain 3 Design Site and Facility Security Controls

--- a/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.09 Design site and facility security controls.md
@@ -274,6 +274,12 @@ Install fire suppression to prevent smoke or fire spread, elevate utilities in f
 
 ---
 
+## 3.9.7 Environmental issues  (e.g., natural disasters, man-made) ##
+
+Environmental issues, including both natural disasters and man-made events, pose significant risks to the physical security of a facility. These events can cause severe damage to infrastructure, disrupt operations, and threaten the safety of personnel and sensitive data. Organizations must proactively assess potential environmental risks and implement strategies to mitigate these threats to ensure the continuity of operations and the protection of assets.
+
+:necktie: We must not only be aware of environmental risks but also assess their potential impact on critical assets and manage them proactively through a structured Business Continuity strategy
+
 
 
 
